--- a/styles/style.scss
+++ b/styles/style.scss
@@ -69,6 +69,10 @@ p {
     margin-bottom: 5px;
     font-weight: 500;
 }
-.check {
+.book_counter {
+    font-weight: 500;
+    display: inline-block;
+}
+.how_much {
     font-weight: 500;
 }
