--- a/styles/style.scss
+++ b/styles/style.scss
@@ -40,6 +40,7 @@ p {
     border: solid;
     border-color: black;
     flex: 1;
+    margin-bottom: 15px;
 }
 .book-title {
     font-weight: bold;
